# proxy-libintl

./: libintl.c  libintl.h  meson.build
